syntax = "proto3";

package upload.v1;

option go_package = "github.com/romashorodok/stream-source/pb/go/upload/v1;uploadpb";

service UploadService {
    rpc GetPresignURL(GetPresignURLRequest) returns (GetPresignURLResponse);
}

message GetPresignURLRequest {
    string title = 1;
}

message GetPresignURLResponse {
    string url = 1;
}

